[package]
name = "whip-up"
version = "0.1.0"
authors = ["Sam Privett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.syn]
version = "1.0.16"
features = ["extra-traits", "full"]

[dependencies.quote]
version = "1.0.3"

[dependencies.proc-macro2]
version = "1.0.9"

[dependencies.clap]
git = "https://github.com/clap-rs/clap/"
